--- a/about.html
+++ b/about.html
@@ -19,9 +19,7 @@
     max-width: 500px;
     margin: 0 auto;
   }
-  h1 {
-    color: #444;
-  }
+  h1 { color: #444; }
   .avatar {
     width: 120px;
     height: 120px;
@@ -48,9 +46,7 @@
     border-radius: 12px;
     transition: background-color 0.3s;
   }
-  .button:hover {
-    background-color: #9cd69c;
-  }
+  .button:hover { background-color: #9cd69c; }
 </style>
 </head>
 <body>
@@ -69,4 +65,3 @@
 
 </body>
 </html>
-
