ボタンの色変更
CSS の color を赤に変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="profile">
-        <h1>こんにちは！私は はるかです</h1>
+        <h1>こんにちは！はるかです</h1>
         <p>趣味：旅行など</p>
         <p>スキル：簿記など</p>
         <p>目標：自分のWebサイトを作ってポートフォリオとして公開すること</p>
