--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>私の自己紹介ページ</title>
+    <title>はるかの自己紹介ページ</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; background-color: #f0f0f0; }
         h1 { color: #2c3e50; }
